--- a/styles/_modular.sass
+++ b/styles/_modular.sass
@@ -14,6 +14,7 @@
       width: 28%
     @media (max-width: 768px)
       width: 90vw
+      height: 40vh
       margin-bottom: 3vh
     border: 2px solid $orange
     border-radius: 5px
@@ -27,7 +28,7 @@
       @media (max-width: 768px)
         width: 45vw
       &:nth-child(1)
-        border-right: 2px solid $gray
+        border-right: 2px solid $orange
       label
         flex: 1
         display: flex
@@ -41,8 +42,8 @@
         font-weight: 600
         background-color: transparent
         &:not(:last-child)
-          border-bottom: 2px solid $gray
+          border-bottom: 2px solid $orange
       input
         display: none
         &:checked + label
-          background-color: lighten($gray, 5%)
+          background-color: lighten($black, 5%)
