--- a/main.css
+++ b/main.css
@@ -213,6 +213,7 @@ button:focus {
 @media (max-width: 768px) {
   .modular form {
     width: 90vw;
+    height: 40vh;
     margin-bottom: 3vh;
   }
 }
@@ -230,7 +231,7 @@ button:focus {
   }
 }
 .modular form div:nth-child(1) {
-  border-right: 2px solid #242424;
+  border-right: 2px solid #D1370A;
 }
 .modular form div label {
   flex: 1;
@@ -246,13 +247,13 @@ button:focus {
   background-color: transparent;
 }
 .modular form div label:not(:last-child) {
-  border-bottom: 2px solid #242424;
+  border-bottom: 2px solid #D1370A;
 }
 .modular form div input {
   display: none;
 }
 .modular form div input:checked + label {
-  background-color: #313131;
+  background-color: #373737;
 }
 
 .effects {
@@ -343,6 +344,15 @@ button:focus {
   border-radius: 5px;
   border: 0px solid #2A2A2A;
 }
+.effects > div input[type=range]::-moz-range-track {
+  width: 90%;
+  height: 3px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: #D1370A;
+  border-radius: 5px;
+  border: 0px solid #2A2A2A;
+}
 .effects > div input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #373737;
   border: 1px solid #00001E;
@@ -353,6 +363,20 @@ button:focus {
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -8px;
+}
+.effects > div input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #373737;
+  border: 1px solid #00001E;
+  height: 20px;
+  width: 20px;
+  border-radius: 15px;
+  background: #D1370A;
+  cursor: pointer;
+  -moz-appearance: none;
+  margin-top: -8px;
+}
+.effects > div input[type=range]::-moz-focus-outer {
+  border: 0;
 }
 
 .controls {
@@ -438,6 +462,15 @@ button:focus {
   border-radius: 5px;
   border: 0px solid #2A2A2A;
 }
+.controls input[type=range]::-moz-range-track {
+  width: 90%;
+  height: 3px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: #D1370A;
+  border-radius: 5px;
+  border: 0px solid #2A2A2A;
+}
 .controls input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #373737;
   border: 1px solid #00001E;
@@ -448,6 +481,20 @@ button:focus {
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -8px;
+}
+.controls input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #373737;
+  border: 1px solid #00001E;
+  height: 20px;
+  width: 20px;
+  border-radius: 15px;
+  background: #D1370A;
+  cursor: pointer;
+  -moz-appearance: none;
+  margin-top: -8px;
+}
+.controls input[type=range]::-moz-focus-outer {
+  border: 0;
 }
 
 .prompt_wrapper {
@@ -537,8 +584,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   width: 100%;
-  justify-content: center;
+  min-height: 85vh;
 }
 main section {
   width: 95%;
