--- a/main.sass
+++ b/main.sass
@@ -25,8 +25,9 @@ main
   display: flex
   flex-direction: column
   align-items: center
+  justify-content: space-around
   width: 100%
-  justify-content: center
+  min-height: 85vh
   section
     width: 95%
     padding: 0.3rem 0.5rem
